--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,11 @@
 		<title>Olin.link</title>
 
 		<!-- Bootstrap CSS -->
-		<!-- TODO: Make these local and inlined -->
+		<!-- TODO: Make this local and inlined -->
 		<link
 			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-			integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
 			crossorigin="anonymous"
 		/>
 
@@ -26,36 +26,78 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="container-fluid">
-			<!-- Bootstrap navbars are dumb: https://stackoverflow.com/a/18292828 -->
-			<nav class="navbar navbar-light bg-light">
-				<div class="navbar-header pull-left">
-					<a class="navbar-brand" href="#"
-						><span class="olin-wordmark">Olin</span>.link</a
-					>
-				</div>
-				<div class="navbar-header pull-right">
-					<ul class="nav navbar-nav">
-						<li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
-					</ul>
-				</div>
-			</nav>
-
-			<div class="jumbotron">
-				<h1 class="display-4">
-					<b><span class="olin-wordmark">Olin</span>.link</b>
-				</h1>
-				<p class="lead">The URL Shortener for the Olin Community</p>
+		<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
+			doesn't make a difference, so KISS): https://stackoverflow.com/a/18292828 -->
+		<nav class="navbar navbar-light">
+			<div class="navbar-header pull-left">
+				<a class="navbar-brand" href="#"><span class="olin-wordmark">Olin</span>.link</a>
 			</div>
+			<div class="navbar-header pull-right">
+				<ul class="nav navbar-nav">
+					<li class="nav-item"><a href="#" class="nav-link">faq</a></li>
+				</ul>
+			</div>
+		</nav>
 
-			<!-- Bootstrap JS -->
-			<!-- TODO: Make these local and inlined, or get rid of them entirely -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-			<script
-				src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-				crossorigin="anonymous"
-			></script>
+		<div class="jumbotron">
+			<h1 class="display-4"><span class="olin-wordmark">Olin</span>.link</h1>
+			<p class="lead">A URL Shortener for the Olin Community</p>
+			<form>
+				<div class="form-group">
+					<label for="long-url">Long URL</label>
+					<input
+						type="url"
+						class="form-control"
+						name="long-url"
+						id="long-url"
+						placeholder="https://google.com?q=care+and+feeding+of+a+pheonix"
+						required
+					/>
+				</div>
+				<div class="form-group">
+					<label for="short-url">Short URL</label>
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="olin-link-input-group-prefix">
+								<b><span class="olin-wordmark">Olin</span>.link</b>/
+							</span>
+						</div>
+						<input
+							aria-describedby="olin-link-input-group-prefix"
+							class="form-control"
+							id="short-url"
+							name="short-url"
+							placeholder="FrankPetsittingTips"
+							pattern="[a-zA-Z0-9_-\.]{5,20}"
+							minlength="5"
+							maxlength="20"
+							required
+						/>
+					</div>
+					<small class="form-text text-muted">
+						Leave blank for a randomly-generated short URL.
+					</small>
+				</div>
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input
+						type="email"
+						class="form-control"
+						name="email"
+						id="email"
+						pattern=".*@{students\.,alumni\.,faculty\.,staff\.,}olin\.edu$"
+						placeholder="fpheonix@olin.edu"
+						title="Please enter your @olin.edu email address."
+						required
+					/>
+					<small class="form-text text-muted">
+						Your email will not be made public.
+					</small>
+				</div>
+				<div class="form-group float-right">
+					<button class="btn btn-primary" type="submit">Go!</button>
+				</div>
+			</form>
 		</div>
 	</body>
 </html>
