feat: slightly tweak placeholders

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="navbar-header pull-right">
 				<ul class="nav navbar-nav">
-					<li class="nav-item"><a href="#" class="nav-link">faq</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -50,7 +50,7 @@
 						class="form-control"
 						name="long-url"
 						id="long-url"
-						placeholder="https://google.com?q=care+and+feeding+of+a+pheonix"
+						placeholder="https://www.google.com/search?q=how+to+feed+a+pheonix"
 						required
 					/>
 				</div>
