--- a/static/index.html
+++ b/static/index.html
@@ -26,78 +26,108 @@
 		<![endif]-->
 	</head>
 	<body>
-		<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
+		<section id="main">
+			<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
 			doesn't make a difference, so KISS): https://stackoverflow.com/a/18292828 -->
-		<nav class="navbar navbar-light">
-			<div class="navbar-header pull-left">
-				<a class="navbar-brand" href="#"><span class="olin-wordmark">Olin</span>.link</a>
-			</div>
-			<div class="navbar-header pull-right">
-				<ul class="nav navbar-nav">
-					<li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
-				</ul>
-			</div>
-		</nav>
-
-		<div class="jumbotron">
-			<h1 class="display-4"><span class="olin-wordmark">Olin</span>.link</h1>
-			<p class="lead">A URL Shortener for the Olin Community</p>
-			<form>
-				<div class="form-group">
-					<label for="long-url">Long URL</label>
-					<input
-						type="url"
-						class="form-control"
-						name="long-url"
-						id="long-url"
-						placeholder="https://www.google.com/search?q=how+to+feed+a+pheonix"
-						required
-					/>
+			<nav class="navbar navbar-light">
+				<div class="navbar-header pull-left">
+					<a class="navbar-brand" href="#"
+						><span class="olin-wordmark">Olin</span>.link</a
+					>
 				</div>
-				<div class="form-group">
-					<label for="short-url">Short URL</label>
-					<div class="input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="olin-link-input-group-prefix">
-								<b><span class="olin-wordmark">Olin</span>.link</b>/
-							</span>
-						</div>
+				<div class="navbar-header pull-right">
+					<ul class="nav navbar-nav">
+						<li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
+					</ul>
+				</div>
+			</nav>
+
+			<div class="jumbotron">
+				<h1 class="display-4"><span class="olin-wordmark">Olin</span>.link</h1>
+				<p class="lead">A URL Shortener for the Olin Community</p>
+				<form>
+					<div class="form-group">
+						<label for="long-url">Long URL</label>
 						<input
-							aria-describedby="olin-link-input-group-prefix"
+							type="url"
 							class="form-control"
-							id="short-url"
-							name="short-url"
-							placeholder="FrankPetsittingTips"
-							pattern="[a-zA-Z0-9_-\.]{5,20}"
-							minlength="5"
-							maxlength="20"
+							name="long-url"
+							id="long-url"
+							placeholder="https://www.google.com/search?q=how+to+feed+a+pheonix"
 							required
 						/>
 					</div>
-					<small class="form-text text-muted">
-						Leave blank for a randomly-generated short URL.
-					</small>
+					<div class="form-group">
+						<label for="short-url">Short URL</label>
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="olin-link-input-group-prefix">
+									<b><span class="olin-wordmark">Olin</span>.link</b>/
+								</span>
+							</div>
+							<input
+								aria-describedby="olin-link-input-group-prefix"
+								class="form-control"
+								id="short-url"
+								name="short-url"
+								placeholder="FrankPetsittingTips"
+								pattern="[a-zA-Z0-9_-\.]{5,20}"
+								minlength="5"
+								maxlength="20"
+								required
+							/>
+						</div>
+						<small class="form-text text-muted">
+							Leave blank for a randomly-generated short URL.
+						</small>
+					</div>
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input
+							type="email"
+							class="form-control"
+							name="email"
+							id="email"
+							pattern=".*@{students\.,alumni\.,faculty\.,staff\.,}olin\.edu$"
+							placeholder="fpheonix@olin.edu"
+							title="Please enter your @olin.edu email address."
+							required
+						/>
+						<small class="form-text text-muted">
+							Your email will not be made public.
+						</small>
+					</div>
+					<div class="form-group float-right">
+						<button class="btn btn-primary" type="submit">Go!</button>
+					</div>
+				</form>
+			</div>
+		</section>
+
+		<section id="faqs">
+			<h1><a name="faq">Frequently Asked Questions</a></h1>
+			<div class="faq-questions">
+				<div class="faq-question-section">
+					<h3 class="faq-question">Q: Blah</h3>
+					<p class="faq-answer">Blah Blah Blah</p>
 				</div>
-				<div class="form-group">
-					<label for="email">Email</label>
-					<input
-						type="email"
-						class="form-control"
-						name="email"
-						id="email"
-						pattern=".*@{students\.,alumni\.,faculty\.,staff\.,}olin\.edu$"
-						placeholder="fpheonix@olin.edu"
-						title="Please enter your @olin.edu email address."
-						required
-					/>
-					<small class="form-text text-muted">
-						Your email will not be made public.
-					</small>
+				<div class="faq-question-section">
+					<h3 class="faq-question">Q: Blah</h3>
+					<p class="faq-answer">Blah Blah Blah</p>
 				</div>
-				<div class="form-group float-right">
-					<button class="btn btn-primary" type="submit">Go!</button>
+				<div class="faq-question-section">
+					<h3 class="faq-question">Q: Blah</h3>
+					<p class="faq-answer">Blah Blah Blah</p>
 				</div>
-			</form>
-		</div>
+				<div class="faq-question-section">
+					<h3 class="faq-question">Q: Blah</h3>
+					<p class="faq-answer">Blah Blah Blah</p>
+				</div>
+				<div class="faq-question-section">
+					<h3 class="faq-question">Q: Blah</h3>
+					<p class="faq-answer">Blah Blah Blah</p>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
